--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,14 +3,18 @@
 export(crosstableServer)
 export(crosstableUI)
 export(enableCheckboxGroupButton)
-import(crosstable)
 import(shiny)
-import(shinyBS)
 import(shinyWidgets)
-import(shinylogs)
-import(tidyverse)
+importFrom(crosstable,as_flextable)
+importFrom(crosstable,crosstable)
+importFrom(dplyr,"%>%")
+importFrom(expss,var_lab)
 importFrom(glue,glue)
+importFrom(knitr,knit_print)
+importFrom(purrr,map)
 importFrom(purrr,map_chr)
+importFrom(purrr,map_lgl)
 importFrom(rlang,as_label)
 importFrom(rlang,enquos)
 importFrom(shinyjs,runjs)
+importFrom(stringr,str_subset)
