--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,4 +17,5 @@ importFrom(purrr,map_lgl)
 importFrom(rlang,as_label)
 importFrom(rlang,enquos)
 importFrom(shinyjs,runjs)
+importFrom(stringr,str_squish)
 importFrom(stringr,str_subset)
