--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(crosstableServer)
 export(crosstableUI)
+import(miniUI)
 import(shiny)
 import(shinyWidgets)
 importFrom(crosstable,as_flextable)
@@ -9,12 +10,17 @@ importFrom(crosstable,crosstable)
 importFrom(dplyr,"%>%")
 importFrom(expss,var_lab)
 importFrom(glue,glue)
+importFrom(glue,glue_collapse)
 importFrom(knitr,knit_print)
 importFrom(purrr,map)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_lgl)
+importFrom(rlang,as_function)
 importFrom(rlang,as_label)
 importFrom(rlang,enquos)
+importFrom(rlang,parse_expr)
+importFrom(rlang,set_names)
 importFrom(shinyjs,runjs)
+importFrom(stringr,str_remove)
 importFrom(stringr,str_squish)
 importFrom(stringr,str_subset)
